tests/query_errors/script_in_port/error.txt
Error: 
    1 | define script in_port
    2 | script from in
      |             ^^ port `in` is reserved for the `script` section
    3 |   event
    4 | script
    5 |   event
    6 | end;